[project]
name = "cluster-screening"
version = "0.1.0"
description = "창업·벤처 녹색융합클러스터 입주 신청서류 적합 검토기"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.36",
    "pdfplumber>=0.11",
    "PyMuPDF>=1.24",
    "easyocr>=1.7",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "openai>=1.40",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "pyzipper>=0.3.6",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# 표/레이아웃 복원이 필요할 때만(무겁고 RAM 큼): uv sync --extra docling
docling = ["docling>=2.105"]
# 근거 문서 RAG(오프라인 임베딩 + 로컬 Chroma + HWP 파싱): uv sync --extra rag
rag = ["sentence-transformers>=3.0", "chromadb>=0.5", "pyhwp>=0.1b15"]
# unstructured 문서 파싱(레이아웃·요소 추출, PDF): uv sync --extra unstructured
unstructured = ["unstructured[pdf]>=0.15", "unstructured-inference>=0.8"]

[project.scripts]
cluster-screening = "cluster_screening.cli:main"
cluster-app = "cluster_screening.run:main"
rag-index = "cluster_screening.rag.cli:index_main"
rag-search = "cluster_screening.rag.cli:search_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# 표준 src 레이아웃: src/cluster_screening/ 아래에서 패키지를 자동 탐색한다.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cluster_screening = ["rules.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["*.ipynb"]   # 탐색용 노트북은 린트 제외

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]               # 한글 주석/문자열이 많아 줄길이는 강제하지 않음

[tool.ruff.lint.per-file-ignores]
"deploy/_fetch_models.py" = ["E402"]   # 진행 출력 사이에 무거운 import를 의도적으로 배치

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
